--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'co.realtime:storage-android:1.2.2'
+    compile 'co.realtime:storage-android:1.2.+'
 }
